--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,10 +5,10 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #fff;
 
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizeLegibility; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -26,6 +26,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  width: 100%;
+  height: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
